# claude-higgsfield-mcp

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  LICENSE  README.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
higgsfield_mcp/: auth.py  consumer.py  core.py  resources.py  server.py
src/higgsfield_mcp/: __init__.py  core.py  pipelines.py  server.py
tests/: test_core.py
